[gd_scene load_steps=4 format=1]

[ext_resource path="res://Nodes/TextPanel.gd" type="Script" id=1]
[ext_resource path="res://Font/Cursive.tres" type="DynamicFont" id=2]
[ext_resource path="res://WordLabel.gd" type="Script" id=3]

[node name="Panel" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 21.0
margin/bottom = 17.0
script/script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 2.0
margin/right = 19.0
margin/bottom = 18.0

[node name="Label" type="Label" parent="Container"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 2.0
margin/right = -713.0
margin/bottom = -90.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "apersonamiento"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 3 )

[node name="OptionsContainer" type="Panel" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 18.0
margin/right = 284.0
margin/bottom = 147.0

[node name="ColorPicker" type="ColorPickerButton" parent="Container/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = 5.0
margin/right = 146.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
color = Color( 0.046875, 0.046875, 0.046875, 1 )
edit_alpha = true

[node name="ColorLabel" type="Label" parent="Container/OptionsContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 7.0
margin/right = 82.0
margin/bottom = 36.0
text = "Color"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SizeLabel" type="Label" parent="Container/OptionsContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = 57.0
margin/right = 69.0
margin/bottom = 81.0
text = "Size"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SizeScrollBar" type="HScrollBar" parent="Container/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 93.0
margin/top = 53.0
margin/right = 272.0
margin/bottom = 72.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="Label" type="Label" parent="Container/OptionsContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = 91.0
margin/right = 55.0
margin/bottom = 105.0
text = "Mayus"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckButton" type="CheckButton" parent="Container/OptionsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 76.0
margin/top = 86.0
margin/right = 152.0
margin/bottom = 108.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[connection signal="input_event" from="Container" to="." method="_on_Container_input_event"]

[connection signal="mouse_enter" from="Container" to="." method="_on_Container_mouse_enter"]

[connection signal="mouse_exit" from="Container" to="." method="_on_Container_mouse_exit"]

[connection signal="color_changed" from="Container/OptionsContainer/ColorPicker" to="Container/Label" method="_on_ColorPicker_color_changed"]

[connection signal="value_changed" from="Container/OptionsContainer/SizeScrollBar" to="Container/Label" method="_on_SizeScrollBar_value_changed"]

[connection signal="toggled" from="Container/OptionsContainer/CheckButton" to="Container/Label" method="_on_CheckButton_toggled"]


